--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ h2 {
   font-size: 1.25em;
   color: #6A3381;
 }
+@media only screen and (max-width: 480px) {
+  h2 {
+    font-size: 1em;
+  }
+}
 
 .min-height {
   min-height: 100vh;
@@ -58,11 +63,49 @@ h2 {
   -webkit-backdrop-filter: blur(0.625em);
           backdrop-filter: blur(0.625em);
 }
+.nav div {
+  margin: auto;
+}
+@media only screen and (max-width: 480px) {
+  .nav div {
+    position: relative;
+    margin: 0;
+  }
+}
+.nav div .nav-list-bg {
+  display: none;
+  left: -21em;
+  top: -1em;
+  content: "";
+  padding: 12em;
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  background: #00000088;
+}
+.nav .menu-ham {
+  display: none;
+}
+@media only screen and (max-width: 480px) {
+  .nav .menu-ham {
+    display: block;
+    width: 10%;
+    z-index: 5;
+  }
+}
+.nav span {
+  width: 10%;
+}
 .nav img {
   vertical-align: middle;
   padding-left: 0.939em;
   height: 1.25em;
   float: right;
+}
+@media only screen and (max-width: 480px) {
+  .nav .logo-nav {
+    margin: auto;
+  }
 }
 .nav a {
   text-decoration: none;
@@ -79,16 +122,46 @@ h2 {
   font-size: 0.5em;
   line-height: 0.7em;
 }
+@media only screen and (max-width: 480px) {
+  .footer {
+    font-size: 0.4em;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .footer .col-sm {
+    padding-bottom: 3em;
+  }
+}
 .footer .left-text {
   margin: auto 0;
+}
+@media only screen and (max-width: 480px) {
+  .footer .right-text {
+    text-align: left;
+  }
 }
 .footer .icons-footer {
   text-align: center;
   display: block;
   margin: auto;
 }
+@media only screen and (max-width: 480px) {
+  .footer .icons-footer {
+    width: 50%;
+  }
+}
 .footer .icons-footer img {
   height: 2.5em;
+}
+@media only screen and (max-width: 480px) {
+  .footer .icons-footer img {
+    height: 4em;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .footer {
+    padding: 2em 3em 1.5em;
+  }
 }
 
 .left-text {
@@ -101,9 +174,24 @@ h2 {
 
 .nav-list {
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   list-style: none;
   text-align: center;
+}
+@media only screen and (max-width: 480px) {
+  .nav-list {
+    z-index: 2;
+    margin: 0;
+    padding: 8em 5em 5em 3em;
+    text-align: left;
+    position: absolute;
+    left: -42em;
+    top: -1em;
+    background: #DABEF1;
+    height: 100vh;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+  }
 }
 .nav-list li {
   margin: 0;
@@ -113,12 +201,24 @@ h2 {
 .nav-list li :hover {
   font-weight: 700;
 }
+@media only screen and (max-width: 480px) {
+  .nav-list li {
+    display: block;
+  }
+}
 .nav-list li a {
   margin: 0;
   padding: 0;
   text-decoration: none;
   display: block;
   color: #ffffff;
+}
+@media only screen and (max-width: 480px) {
+  .nav-list li a {
+    color: #6A3381;
+    padding-bottom: 1.5em;
+    font-size: 1.2em;
+  }
 }
 
 .header {
@@ -142,9 +242,19 @@ h2 {
   font-size: 0.938em;
   color: #ffffff;
 }
+@media only screen and (max-width: 480px) {
+  .header div h2 {
+    font-size: 0.45em;
+  }
+}
 .header div h1 {
   font-weight: 700;
   font-size: 3em;
+}
+@media only screen and (max-width: 480px) {
+  .header div h1 {
+    font-size: 1.4em;
+  }
 }
 .header section {
   padding: 0.938em;
@@ -173,6 +283,11 @@ h2 {
   margin: 0;
   padding: 2.5em 5em;
 }
+@media only screen and (max-width: 480px) {
+  .quienes-somos {
+    padding: 1.5em;
+  }
+}
 .quienes-somos h3 {
   margin: 0;
   padding: 0;
@@ -180,6 +295,11 @@ h2 {
   font-weight: 400;
   font-size: 0.938em;
   color: #6A3381;
+}
+@media only screen and (max-width: 480px) {
+  .quienes-somos h3 {
+    font-size: 0.7em;
+  }
 }
 .quienes-somos p {
   margin: 0;
@@ -196,20 +316,44 @@ h2 {
   width: auto;
   height: 1.5em;
 }
+@media only screen and (max-width: 480px) {
+  .quienes-somos img {
+    margin: 0.5em;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+}
 .quienes-somos .row {
   padding-bottom: 1em;
 }
-.quienes-somos .col-4 {
+.quienes-somos .col-sm-4 {
   margin: 0 auto;
   padding: 0.938em;
   width: 30%;
   background-color: #DABEF1;
   border-radius: 0.8em;
 }
+@media only screen and (max-width: 480px) {
+  .quienes-somos .col-sm-4 {
+    width: 100%;
+    margin-bottom: 1em;
+  }
+}
 
 .testimonios {
   padding: 3em 1em;
   background-color: #DABEF1;
+}
+@media only screen and (max-width: 480px) {
+  .testimonios {
+    padding: 1.5em 0.5em;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .testimonios .testimonios-laterales {
+    display: none;
+  }
 }
 .testimonios h2 {
   margin: 0 0 1em;
@@ -225,6 +369,12 @@ h2 {
   margin: auto;
   width: 2em;
   height: 2em;
+}
+@media only screen and (max-width: 480px) {
+  .testimonios .col-1 span {
+    height: 1em;
+    width: 1em;
+  }
 }
 .testimonios .col-4 {
   margin: 0 auto;
@@ -250,6 +400,11 @@ h2 {
   margin: 0;
   padding-bottom: 4em;
 }
+@media only screen and (max-width: 480px) {
+  .testimonios .col-4 {
+    width: 100%;
+  }
+}
 .testimonios .cita {
   display: block;
   margin: 2em 0;
@@ -264,14 +419,24 @@ h2 {
   margin: 0;
   padding: 2.5em 5em;
 }
+@media only screen and (max-width: 480px) {
+  .contacto {
+    padding: 1em 0.5em;
+  }
+}
 .contacto h3 {
   font-size: 0.7em;
 }
-.contacto .col-6 {
+@media only screen and (max-width: 480px) {
+  .contacto h3 {
+    font-size: 0.5em;
+  }
+}
+.contacto .col-sm-6 {
   margin: 0;
   padding: 0 1em;
 }
-.contacto .col-6 form input {
+.contacto .col-sm-6 form input {
   display: block;
   margin: 0.938em 0;
   padding: 0.1em 0.5em;
@@ -284,41 +449,47 @@ h2 {
   border-radius: 1em;
   width: 100%;
 }
-.contacto .col-6 form input:focus {
+.contacto .col-sm-6 form input:focus {
   outline: none !important;
   border: 0.07em solid #6A3381;
 }
-.contacto .col-6 form input::-webkit-input-placeholder {
+.contacto .col-sm-6 form input::-webkit-input-placeholder {
   font-family: "Raleway";
   font-weight: 400;
   font-size: 0.8em;
   color: #C27EDF;
 }
-.contacto .col-6 form input::-moz-placeholder {
+.contacto .col-sm-6 form input::-moz-placeholder {
   font-family: "Raleway";
   font-weight: 400;
   font-size: 0.8em;
   color: #C27EDF;
 }
-.contacto .col-6 form input:-ms-input-placeholder {
+.contacto .col-sm-6 form input:-ms-input-placeholder {
   font-family: "Raleway";
   font-weight: 400;
   font-size: 0.8em;
   color: #C27EDF;
 }
-.contacto .col-6 form input::-ms-input-placeholder {
+.contacto .col-sm-6 form input::-ms-input-placeholder {
   font-family: "Raleway";
   font-weight: 400;
   font-size: 0.8em;
   color: #C27EDF;
 }
-.contacto .col-6 form input::placeholder {
+.contacto .col-sm-6 form input::placeholder {
   font-family: "Raleway";
   font-weight: 400;
   font-size: 0.8em;
   color: #C27EDF;
 }
-.contacto .col-6 form textarea {
+@media only screen and (max-width: 480px) {
+  .contacto .col-sm-6 form input {
+    border: 0.1em solid #C27EDF;
+    border-radius: 0.7em;
+  }
+}
+.contacto .col-sm-6 form textarea {
   display: block;
   margin: 0.938em 0;
   padding: 0.5em;
@@ -331,46 +502,52 @@ h2 {
   border-radius: 1em;
   width: 100%;
 }
-.contacto .col-6 form textarea::-webkit-input-placeholder {
+.contacto .col-sm-6 form textarea::-webkit-input-placeholder {
   font-family: "Raleway";
   font-weight: 400;
   font-size: 0.8em;
   color: #C27EDF;
 }
-.contacto .col-6 form textarea::-moz-placeholder {
+.contacto .col-sm-6 form textarea::-moz-placeholder {
   font-family: "Raleway";
   font-weight: 400;
   font-size: 0.8em;
   color: #C27EDF;
 }
-.contacto .col-6 form textarea:-ms-input-placeholder {
+.contacto .col-sm-6 form textarea:-ms-input-placeholder {
   font-family: "Raleway";
   font-weight: 400;
   font-size: 0.8em;
   color: #C27EDF;
 }
-.contacto .col-6 form textarea::-ms-input-placeholder {
+.contacto .col-sm-6 form textarea::-ms-input-placeholder {
   font-family: "Raleway";
   font-weight: 400;
   font-size: 0.8em;
   color: #C27EDF;
 }
-.contacto .col-6 form textarea::placeholder {
+.contacto .col-sm-6 form textarea::placeholder {
   font-family: "Raleway";
   font-weight: 400;
   font-size: 0.8em;
   color: #C27EDF;
 }
-.contacto .col-6 form textarea:focus {
+.contacto .col-sm-6 form textarea:focus {
   outline: none !important;
   border: 0.07em solid #6A3381;
 }
-.contacto .col-6 form button {
+@media only screen and (max-width: 480px) {
+  .contacto .col-sm-6 form textarea {
+    border: 0.1em solid #C27EDF;
+    border-radius: 0.7em;
+  }
+}
+.contacto .col-sm-6 form button {
   display: block;
   margin: 0.938em 0;
   padding: 0.5em;
   font-family: "Raleway";
-  font-weight: 400;
+  font-weight: 700;
   font-size: 0.7em;
   color: #C27EDF;
   background: #FCF9FF;
@@ -379,14 +556,27 @@ h2 {
   width: 100%;
   text-transform: uppercase;
 }
-.contacto .col-6 form button:hover {
+.contacto .col-sm-6 form button:hover {
   font-family: "Raleway";
   font-weight: 700;
   font-size: 0.7em;
   color: #FCF9FF;
   background: #C27EDF;
 }
-.contacto .col-6 .card-contacto {
+@media only screen and (max-width: 480px) {
+  .contacto .col-sm-6 form button {
+    border: 0.1em solid #C27EDF;
+    border-radius: 1em;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    float: right;
+    padding: 0.2em 0.7em;
+    margin: 0.5em 0;
+    font-size: 0.6em;
+  }
+}
+.contacto .col-sm-6 .card-contacto {
   margin: 0.65em 0 0.938em;
   padding: 1em;
   background: #FCF9FF;
@@ -395,19 +585,36 @@ h2 {
   height: -moz-fit-content;
   height: fit-content;
 }
-.contacto .col-6 .card-contacto .row {
+@media only screen and (max-width: 480px) {
+  .contacto .col-sm-6 .card-contacto {
+    padding: 0.2em;
+    border-radius: 0.5em;
+  }
+}
+.contacto .col-sm-6 .card-contacto .row {
   margin: auto;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
 }
-.contacto .col-6 .card-contacto .row span {
+@media only screen and (max-width: 480px) {
+  .contacto .col-sm-6 .card-contacto .row {
+    padding: 0 0 0.2em;
+  }
+}
+.contacto .col-sm-6 .card-contacto .row span {
   display: inline-block;
   margin: 0;
   height: 1.5em;
   width: 1.5em;
 }
-.contacto .col-6 .card-contacto .row p {
+@media only screen and (max-width: 480px) {
+  .contacto .col-sm-6 .card-contacto .row span {
+    height: 1.3em;
+    width: 1.3em;
+  }
+}
+.contacto .col-sm-6 .card-contacto .row p {
   font-size: 0.6em;
   display: inline-block;
   margin: auto 0;
@@ -419,7 +626,15 @@ h2 {
   height: fit-content;
   color: #C27EDF;
 }
-.contacto .col-6 .card-ubicacion h3 {
+@media only screen and (max-width: 480px) {
+  .contacto .col-sm-6 .card-contacto .row p {
+    font-size: 0.4em;
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+}
+.contacto .col-sm-6 .card-ubicacion h3 {
   margin: 0em 0 1em;
   text-align: left;
   width: 100%;
@@ -428,13 +643,23 @@ h2 {
   font-size: 0.7em;
   color: #C27EDF;
 }
-.contacto .col-6 .card-ubicacion span {
+@media only screen and (max-width: 480px) {
+  .contacto .col-sm-6 .card-ubicacion h3 {
+    font-size: 0.6em;
+  }
+}
+.contacto .col-sm-6 .card-ubicacion span {
   display: block;
   overflow: hidden;
   border-radius: 1em;
 }
-.contacto .col-6 .card-ubicacion span img {
+.contacto .col-sm-6 .card-ubicacion span img {
   width: 100%;
+}
+@media only screen and (max-width: 480px) {
+  .contacto .col-sm-6 .card-ubicacion span {
+    padding: 0;
+  }
 }
 
 .cards {
