--- a/sass/style.scss
+++ b/sass/style.scss
@@ -519,18 +519,38 @@ h2{
         padding: 2.5em 0 .5em;
         font-size: 1.5em;
         font-weight: $bold;
+        @include respond-to($phone){
+            font-size: .7em;
+            padding: 4.5em 0 .5em;
+        }
     }
     .container-cards{
         padding: 0 5em 2em;
+        @include respond-to($phone){
+            padding: 0 1em 1em;
+        }
         h2{
             @include set_text("Raleway", $bold, 1em, $moradoBase);
             text-align: left;
             padding: .25em 0 .5em;
+            @include respond-to($phone){
+                padding-top: 2em;
+                padding-bottom: .5em;
+                font-size: .5em;
+            }
         }
         p{
             @include set_text("Raleway", $regular, .5em, $moradoBase);
             text-align: left;
             padding: .5em 0;
+        }
+        .col-sm-3{
+            .option{
+                display: block;
+                .btn-repo{
+                    margin: 0 auto .5em;
+                }
+            }
         }
     }
 }
@@ -547,12 +567,17 @@ h2{
         @include set_text("Raleway", $bold, .7em, $moradoBase);
     }
 }
+
 .card-derechos{
     padding: .5em;
     margin: 0 .5em .5em 0;
     background: $moradoMedio;
     border-radius: .5em;
     width: 30%;
+    @include respond-to($phone){
+        width: 100%;
+    }
+
     .card-p{
         margin: 0;
         @include set_text("Raleway", $bold, .7em, $moradoBase);
@@ -589,23 +614,99 @@ h2{
 .temas-interes-header{
     margin: 0 auto;
     padding: 4em 8em 2em 8em;
+    @include respond-to($phone){
+        padding: 2.5em 1.5em 1em;
+    }
     h1{
         font-size: 1.5em;
         font-weight: $bold;
+        @include respond-to($phone){
+            font-size: .7em;
+        }
     }
     p{
         margin: 2em 0;
         text-align: left;
         @include set_text("Raleway", $regular, .6em, $moradoBase);
+        @include respond-to($phone){
+            font-size: .5em;
+            text-align: center;
+        }
     }
-    .btn-repo{
-        margin-right: 1em;
+}
+.select-box{
+    @include respond-to($phone){
+        position: relative;
+    }
+    #txt-select-box{
+        display: none;
+        @include respond-to($phone){
+            display: block;
+            background: $moradoMedio;
+            border-radius: .7em;
+            box-shadow: 0 .25em .625em rgba(0, 0, 0, 0.1);
+            z-index: 2;
+        }
+        p{
+            @include set_text("Raleway", $bold, .5em, $moradoBase);
+            display: inline-block;
+            margin: 1em 0;
+            padding: 0;
+            text-align: left;
+        }
+        img{
+            @include respond-to($phone){
+                display: inline-block;
+                margin-left: 1em;
+                width: auto;
+                height: .3em;
+            }
+        }
+    }
+    .options-container{
+        display: block;
+        @include respond-to($phone){
+            position: absolute;
+            background: $blanco;
+            width: 100%;
+            padding-top: 2em;
+            border-radius: 1em .7em;
+            display: none;
+            transition: all .5s;
+            overflow: hidden;
+            z-index: 0;
+        }
+        .option{
+            display: inline-block;
+            @include respond-to($phone){
+                display: block;
+            }
+            .btn-repo{
+                margin-right: 1em;
+                @include respond-to($phone){
+                    border: none;
+                    font-size: .5em;
+                    text-align: left;
+                }
+                br{
+                    @include respond-to($phone){
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
+    .options-container.active{
+        display: block;
     }
 }
 .cards-temas-interes{
     margin: 0;
     padding: 0 4em;
-    .col-6{
+    @include respond-to($phone){
+        padding: .5em;
+    }
+    .col-sm-6{
         margin: 0;
         padding: .7em .7em 0;
         div{
@@ -620,17 +721,35 @@ h2{
                 font-size: .938em;
                 color: #ffffff;
                 box-shadow: 0 .25em .625em rgba(0, 0, 0, 0.1);
+                @include respond-to($phone){
+                    font-size: .6em;
+                }
+            }
+            img{
+                @include respond-to($phone){
+                    width: 100%;
+                    height: auto;
+                }
             }
             div{
                 margin: 0;
                 padding: 1.5em;
+                @include respond-to($phone){
+                    padding: .5em 1em;
+                }
                 h3{
                     text-align: left;
                     @include set_text("Raleway", $bold, .7em, $moradoBase);
+                    @include respond-to($phone){
+                        font-size: .5em;
+                    }
                 }
                 p{
                     text-align: left;
                     @include set_text("Raleway", $regular, .7em, $moradoBase);
+                    @include respond-to($phone){
+                        font-size: .5em;
+                    }
                 }
                 hr{
                     margin: 0 auto 1em;
