--- a/sass/style.scss
+++ b/sass/style.scss
@@ -574,6 +574,7 @@ h2{
     background: $moradoMedio;
     border-radius: .5em;
     width: 30%;
+    cursor: pointer;
     @include respond-to($phone){
         width: 100%;
     }
@@ -598,6 +599,10 @@ h2{
     border-radius: .5em;
     width: 30%;
     overflow: hidden;
+    cursor: pointer;
+    @include respond-to($phone){
+        width: 100%;
+    }
     .card-p{
         padding: 1em !important;
         margin: 0;
@@ -765,12 +770,18 @@ h2{
     flex-wrap: wrap;
     margin: 0;
     padding: 0 4em 2em;
+    @include respond-to($phone){
+        padding: 0 .5em 1em;
+    }
     .card-colaborador{
         padding: 0;
         margin: .5em auto;
         border-radius: .5em;
         width: 45%;
         background:  #EAE0F0;
+        @include respond-to($phone){
+            width: 90%;
+        }
         img{
             margin: 1em auto;
             padding: 0;
@@ -783,29 +794,49 @@ h2{
         p{
             padding: .5em 1.5em;
             font-size: .6em;
+            @include respond-to($phone){
+                text-align: left;
+            }
         }
         .p-bold{
             font-weight: $bold;
+            @include respond-to($phone){
+                text-align: center;
+                font-size: .5em;
+            }
         }
     }
 }
 .redes-comunitarias-header{
     margin: 0 auto;
     padding: 4em 8em;
+    @include respond-to($phone){
+        padding: 2.5em 1.5em 1em;
+    }
     h1{
         font-size: 1.5em;
         font-weight: $bold;
         margin-bottom: 1em;
+        @include respond-to($phone){
+            font-size: 1.2em;
+        }
     }
     h2{
 
         text-align: left;
         font-size: 1em;
+        @include respond-to($phone){
+            font-size: .7em;
+            text-align: center;
+        }
     }
     p{
         margin: 2em 0;
         text-align: left;
         @include set_text("Raleway", $regular, .6em, $moradoBase);
+        @include respond-to($phone){
+            font-size: .5em;
+        }
     }
     .btn-repo{
         margin-right: 1em;
@@ -815,10 +846,13 @@ h2{
         padding: 1.5em;
         border-radius: 1em;
         background: #EAE0F0;
+        @include respond-to($phone){
+            padding: .5em;
+        }
         div{
             margin-top: .5em;
         }
-        .col-6{
+        .col-sm-6{
             padding: 0 1em;
         }
         h2{
@@ -834,4 +868,103 @@ h2{
             margin: 1em auto;
         }
     }
+}
+
+.modales{
+    max-width: 60%; 
+    @include respond-to($phone){
+        max-width: 100%;
+    }
+    .modal-content{
+        background-color: $moradoMedio;
+        text-align: left;
+        border-radius: .7em;
+        max-height: 70vh;
+        @include respond-to($phone){
+            max-height: 80vh;
+        }
+        overflow: hidden;        
+        h5{
+            @include set_text("Raleway", $bold, 1em, $moradoBase);            
+        }
+        .col-sm-6{
+            padding: 1em;
+        }
+        .col-imagen-modal{
+            background-color: $moradoClaro;
+            padding: 0;
+            margin: 0;
+        }
+        .span-modal-left{
+            margin: auto;
+            padding: 1em;
+            width: 50%;
+            height: 100%;
+            display: block;
+            @include respond-to($phone){
+                width: 0%;
+                display: none;
+                padding: 0;
+            }
+            img{
+                margin: auto 0;
+                display: block;
+                height: auto;
+                width: 100%;
+            }
+        }
+        .span-modal-left-galeria{
+            margin: auto;
+            width: 100%;
+            height: 100%;
+            display: block;
+            
+            @include respond-to($phone){
+                width: 100%;
+            }
+            img{
+                margin: auto 0;
+                display: block;
+                height: auto;
+                width: 100%;
+            }
+        }
+        .descripcion-modal{
+            margin: .5em 0;
+            height: 40vh;
+            overflow-y: scroll;
+            @include respond-to($phone){
+                height: 30vh;
+                margin: 1em 0;
+            }
+            &::-webkit-scrollbar{
+                width: .1em;
+                background: $moradoClaro;
+                border-radius: .5em;
+            }
+            &::-webkit-scrollbar-thumb{
+                background: $moradoBase;
+                border-radius: .5em;
+            }
+            p{
+                font-size: .6em;
+                padding-right: .5em;
+            }
+        }        
+        .btn-repo{
+            float: right;
+            background: $moradoBase;
+            color: #ffffff;
+            padding: .5em 2.5em;
+            border-radius: 2em;
+            font-size: .5em;
+            img{
+                width: auto;
+                height: 1.3em;
+                padding: 0 .5em;
+            }
+        }
+        
+    }
+    
 }
