--- a/public/css/style.css
+++ b/public/css/style.css
@@ -791,6 +791,7 @@ h2 {
   margin: 0 0.5em 0.5em 0;
   background: #DABEF1;
   border-radius: 0.5em;
+  height: 30vh;
   width: 30%;
   overflow: hidden;
   cursor: pointer;
@@ -805,6 +806,7 @@ h2 {
   margin: 0;
   font-family: "Raleway";
   font-weight: 700;
+  height: 8vh;
   font-size: 0.7em;
   color: #6A3381;
   font-weight: 700 !important;
@@ -814,6 +816,16 @@ h2 {
 }
 .card-galeria img {
   width: 100%;
+  height: 22vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center center;
+     object-position: center center;
+}
+@media only screen and (max-width: 480px) {
+  .card-galeria img {
+    width: 100%;
+  }
 }
 
 .temas-interes-header {
@@ -1169,6 +1181,14 @@ h2 {
   background-color: #F2E7F9;
   padding: 0;
   margin: 0;
+  height: 70vh;
+  overflow: hidden;
+}
+@media only screen and (max-width: 480px) {
+  .modales .modal-content .col-imagen-modal {
+    height: 100%;
+    overflow: unset;
+  }
 }
 .modales .modal-content .span-modal-left {
   margin: auto;
@@ -1195,10 +1215,12 @@ h2 {
   width: 100%;
   height: 100%;
   display: block;
+  overflow: scroll;
 }
 @media only screen and (max-width: 480px) {
   .modales .modal-content .span-modal-left-galeria {
     width: 100%;
+    overflow-y: unset;
   }
 }
 .modales .modal-content .span-modal-left-galeria img {
@@ -1206,6 +1228,8 @@ h2 {
   display: block;
   height: auto;
   width: 100%;
+  -o-object-position: top center;
+     object-position: top center;
 }
 .modales .modal-content .descripcion-modal {
   margin: 0.5em 0;
@@ -1216,6 +1240,9 @@ h2 {
   .modales .modal-content .descripcion-modal {
     height: 30vh;
     margin: 1em 0;
+  }
+  .modales .modal-content{
+    overflow-y: scroll;
   }
 }
 .modales .modal-content .descripcion-modal::-webkit-scrollbar {
@@ -1469,6 +1496,11 @@ h2 {
   display: inline-flex;
   font-size: 0.6em;
   color: #6A3381;
+  text-decoration: underline;
+  cursor: pointer;
+}
+.admin-dashboard .tupla a :hover{
+  text-decoration: underline;
 }
 .admin-dashboard .tupla .col-6 {
   margin: 0;
@@ -1670,4 +1702,9 @@ h2 {
   color: red;
   font-size: .5em;
   font-weight: 700;
+}
+.msg-modal-admin{
+  color: #6A3381;
+  font-size: .8em;
+  font-weight: 300;
 }
