--- a/public/css/style.css
+++ b/public/css/style.css
@@ -233,7 +233,7 @@ h2 {
 }
 
 .header {
-  background-image: url("../imgs/PuntoVioleta_bg.png");
+  /*background-image: url("../imgs/PuntoVioleta_bg.png");*/
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
